Pong: init:: FR74324, Add the new STM device node
As a part FR74324 requirement, added the new STM NFC device node
entries in uevent RC file.

Change-Id: I07ae2d5f52d8711e59f49c3b06c8b8d6df22ec58

--- a/init/ueventd.qcom.rc
+++ b/init/ueventd.qcom.rc
@@ -324,6 +324,7 @@ subsystem mem_buf_vm
 /dev/nfc-nci              0660    nfc         nfc
 /dev/nq-nci               0660    nfc         nfc
 /dev/assd                 0660    nfc         nfc
+/dev/st21nfc              0660    nfc         nfc
 
 # eSE permissions
 /dev/st54spi_gpio         0660   system     system
