Pong: init: Change ownership of UFS LUN4 BSG device for raw partition access
Trust zone GPT service listener needs to access UFS LUN4 BSG device to
perform raw partition access, hence its change owenership so that it can
be accessed without root permissions.

Change-Id: I97fac4c47c537a07d3e5fc3920e9e13a7fe5d092
Signed-off-by: chandu078 <chandudyavanapelli03@gmail.com>

--- a/init/ueventd.qcom.rc
+++ b/init/ueventd.qcom.rc
@@ -77,6 +77,9 @@ subsystem mem_buf_vm
 #permissions for UFS RPMB BSG device node
 /dev/0:0:0:49476          0600   system     system
 
+#permissions for GPT listener on LUN4
+/dev/0:0:0:4              0600   system     root
+
 #permissions for CSVT
 /dev/smd11                0660   radio      radio
 
