Pong: init: Add a vendor directory for audio
Add data/vendor/audio_dsp sub directory for audio use.

Change-Id: Ibf1b026f5106e0615cd5d39323dcbba1154d4ca5
Signed-off-by: chandu078 <chandudyavanapelli03@gmail.com>

--- a/init/init.qcom.rc
+++ b/init/init.qcom.rc
@@ -296,6 +296,7 @@ on post-fs-data
 
     # Create directory used by audio subsystem
     mkdir /data/vendor/audio 0770 audio audio
+    mkdir /data/vendor/audio_dsp 0770 media media
 
     # Create directory for audio delta files
     mkdir /data/vendor/audio/acdbdata 0770 media audio
