--- a/init/ueventd.qcom.rc
+++ b/init/ueventd.qcom.rc
@@ -437,6 +437,9 @@ subsystem mem_buf_vm
 /sys/class/dual_role_usb/*	power_role	0660	system	system
 /sys/class/dual_role_usb/*	mode		0660	system	system
 
+# USB Dynamic Disable
+/sys/bus/platform/devices/a600000.ssusb	dynamic_disable	0220	root	usb
+
 #Memory Offline
 /sys/devices/system/memory/memory* state    0660 system system
 
