--- a/init/ueventd.qcom.rc
+++ b/init/ueventd.qcom.rc
@@ -124,6 +124,7 @@ subsystem mem_buf_vm
 /dev/btpower              0660   bluetooth  system
 /dev/btfmslim             0660   bluetooth  system
 /dev/bt_cp_ctrl           0660   bluetooth  system
+/dev/btfmcodec_dev        0660   bluetooth  system
 
 #permissions for pta
 /dev/pta                  0660   system     system
