--- a/init/init.nt.rc
+++ b/init/init.nt.rc
@@ -38,6 +38,9 @@ on property:sys.boot_completed=1
     # OTG
     chown system system /proc/charger/nt_otg_enable
     write /proc/charger/nt_otg_enable 4
+    
+    # Enable PowerHAL hint processing
+    setprop vendor.powerhal.init 1
 
 on post-fs-data
     # Enable WLAN SSR
