Pong: init: Add system permission for power_state
Add system read and write permission for power_state device node.

Change-Id: I4136afa4669288eec90668bc2e1f20075434e26b
Signed-off-by: chandu078 <chandudyavanapelli03@gmail.com>

--- a/init/ueventd.qcom.rc
+++ b/init/ueventd.qcom.rc
@@ -509,3 +509,6 @@ subsystem mem_buf_vm
 
 # Battery
 /sys/class/qcom-battery                                 charging_en                     0660    system  system
+
+#power_state device node
+/dev/power_state           0660   system      system
