--- a/init/ueventd.qcom.rc
+++ b/init/ueventd.qcom.rc
@@ -419,6 +419,7 @@ subsystem mem_buf_vm
 /dev/block/platform/soc/7c4000.sdhci/by-name/frp        0600   system     system
 /dev/block/platform/soc/4744000.sdhci/by-name/frp       0600   system     system
 /dev/block/platform/soc/4804000.ufshc/by-name/frp       0600   system     system
+/dev/block/platform/soc/1bf8000.pcie/by-name/frp        0600   system     system
 /dev/block/platform/soc/7c4000.sdhci/by-name/rawdump       0660   root     system
 /dev/block/platform/soc/1d84000.ufshc/by-name/rawdump       0660   root     system
 
