Pong: Implement torch light control
Change-Id: Icd32d1f6aedb55462c9df4d7cc63a2a4c4e4263e

[RealJohnGalt:] modify for oneplus usage, add toggle switch
[Ghosuto:] Adapt for Pong

Signed-off-by: Ghosuto <clash.raja10@gmail.com>

--- a/init/ueventd.qcom.rc
+++ b/init/ueventd.qcom.rc
@@ -512,3 +512,8 @@ subsystem mem_buf_vm
 
 #power_state device node
 /dev/power_state           0660   system      system
+
+# Camera
+/sys/devices/platform/soc/c42d000.qcom,spmi/spmi-0/0-02/c42d000.qcom,spmi:qcom,pm8350c@2:qcom,flash_led@ee00/leds/led:torch_0  brightness 0660 cameraserver camera
+/sys/devices/platform/soc/c42d000.qcom,spmi/spmi-0/0-02/c42d000.qcom,spmi:qcom,pm8350c@2:qcom,flash_led@ee00/leds/led:torch_1  brightness 0660 cameraserver camera
+/sys/devices/platform/soc/c42d000.qcom,spmi/spmi-0/0-02/c42d000.qcom,spmi:qcom,pm8350c@2:qcom,flash_led@ee00/leds/led:switch_0 brightness 0660 cameraserver camera
