Pong: wifi: Set mid high threshold for HSP
Previously, IPA had its default vote which will bump up the SNOC
frequency to 200 MHz. Now IPA has removed its vote which is
causing throughput drop in HE cases for SAP and P2P GO mode.
To fix this, Set gBusBandwidthMidHighThreshold to 5500 to meet
throughput goals of SAP and P2P.

Change-Id: Id8b8b67ec2ca82cba48db34f589dcf74be41918e
CRs-Fixed: 3387504
Signed-off-by: Ghosuto <clash.raja10@gmail.com>

--- a/configs/wifi/WCNSS_qcom_cfg.ini
+++ b/configs/wifi/WCNSS_qcom_cfg.ini
@@ -63,6 +63,7 @@ dp_rx_flow_search_table_size=128
 rpsRxQueueCpuMapList=f3
 legacy_mode_csum_disable=1
 icmp_req_to_fw_mark_interval=200
+gBusBandwidthMidHighThreshold=5500
 gBusBandwidthVeryHighThreshold=10000
 
 ################ Datapath feature set End ################
