Pong: init: Add /sys/class/qcom-haptics node permissions
Add haptics node permissions for audio hal to read the haptics
V and I Scale trim register values stored in haptics sysnode.

Change-Id: I07e1e0ebee6d1af47255159fcc5969f05d3ef273
Signed-off-by: chandu078 <chandudyavanapelli03@gmail.com>

--- a/init/ueventd.qcom.rc
+++ b/init/ueventd.qcom.rc
@@ -452,6 +452,8 @@ subsystem mem_buf_vm
 #Haptics class devices
 /sys/class/qcom-haptics    visense_enabled     0400    system    system
 /sys/class/qcom-haptics    primitive_duration  0600    system    system
+/sys/class/qcom-haptics    v_gain_error        0640    system    audio
+/sys/class/qcom-haptics    i_gain_error        0640    system    audio
 
 # NPU device
 /dev/msm_npu             0644   system     system
