--- a/init/init.nt.rc
+++ b/init/init.nt.rc
@@ -35,6 +35,10 @@ on property:sys.boot_completed=1
     chown system system /sys/class/qcom-battery/wireless_boost_en
     chown system system /sys/class/qcom-battery/wls_reverse_status
 
+    # OTG
+    chown system system /proc/charger/nt_otg_enable
+    write /proc/charger/nt_otg_enable 4
+
 on post-fs-data
     # Enable WLAN SSR
     write /sys/kernel/cnss/recovery 1
