Pong: init: Kill WALT CPU boosting

--- a/init/init.nt.rc
+++ b/init/init.nt.rc
@@ -41,6 +41,11 @@ on property:sys.boot_completed=1
     
     # Enable PowerHAL hint processing
     setprop vendor.powerhal.init 1
+    
+on property:vendor.post_boot.parsed=1
+    # Kill WALT CPU input boost
+    write /proc/sys/walt/input_boost/input_boost_freq "0 0 0 0 0 0 0"
+    write /proc/sys/walt/input_boost/input_boost_ms 0
 
 on post-fs-data
     # Enable WLAN SSR
