--- a/init/init.nt.rc
+++ b/init/init.nt.rc
@@ -53,3 +53,10 @@ on post-fs-data
 
 on property:sys.boot_completed=1
     swapon_all /vendor/etc/fstab.zram
+
+on property:vendor.post_boot.parsed=1
+    # IRQ Tuning
+    # IRQ 243: msm_drm
+    # IRQ 240: kgsl_3d0_irq
+    write /proc/irq/243/smp_affinity_list 2
+    write /proc/irq/240/smp_affinity_list 1
