--- a/init/ueventd.nt.rc
+++ b/init/ueventd.nt.rc
@@ -4,5 +4,8 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
+# LEDs
+/dev/led_strips             0660   system       system
+
 # NFC
 /dev/pn553    0660    nfc               nfc
