--- a/init/init.nt.rc
+++ b/init/init.nt.rc
@@ -53,6 +53,10 @@ on property:vendor.post_boot.parsed=1
     # Kill WALT CPU input boost
     write /proc/sys/walt/input_boost/input_boost_freq "0 0 0 0 0 0 0"
     write /proc/sys/walt/input_boost/input_boost_ms 0
+
+    # dex2oat
+    setprop dalvik.vm.dex2oat-cpu-set 0,1,2,3,4,5,6
+    setprop dalvik.vm.dex2oat-threads 6
     
     # IRQ Tuning
     # IRQ 243: msm_drm -> CPU 7
