--- a/init/init.nt.rc
+++ b/init/init.nt.rc
@@ -63,3 +63,11 @@ on property:vendor.post_boot.parsed=1
     # IRQ 240: kgsl_3d0_irq -> CPU 6
     write /proc/irq/243/smp_affinity_list 7
     write /proc/irq/240/smp_affinity_list 6
+
+    # CPUFreq
+    write /sys/devices/system/cpu/cpufreq/policy0/walt/up_rate_limit_us 500
+    write /sys/devices/system/cpu/cpufreq/policy0/walt/down_rate_limit_us 20000
+    write /sys/devices/system/cpu/cpufreq/policy4/walt/up_rate_limit_us 1000
+    write /sys/devices/system/cpu/cpufreq/policy4/walt/down_rate_limit_us 10000
+    write /sys/devices/system/cpu/cpufreq/policy7/walt/up_rate_limit_us 2000
+    write /sys/devices/system/cpu/cpufreq/policy7/walt/down_rate_limit_us 5000
