--- a/init/init.nt.rc
+++ b/init/init.nt.rc
@@ -71,3 +71,9 @@ on property:vendor.post_boot.parsed=1
     write /sys/devices/system/cpu/cpufreq/policy4/walt/down_rate_limit_us 10000
     write /sys/devices/system/cpu/cpufreq/policy7/walt/up_rate_limit_us 2000
     write /sys/devices/system/cpu/cpufreq/policy7/walt/down_rate_limit_us 5000
+
+    chown system graphics /sys/class/drm/card0/sde-crtc-0/measured_fps
+    chmod 0660 /sys/class/drm/card0/sde-crtc-0/measured_fps
+
+    chown system system /sys/class/power_supply/battery/temp
+    chmod 0660 /sys/class/power_supply/battery/temp
